change config for collection

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
+collection: 
+  recipes:
+    output: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
